--- a/pull-to-refresh.css
+++ b/pull-to-refresh.css
@@ -2,7 +2,7 @@
 
 .ptr-indicator {
     position: fixed;
-    top: 70px;
+    top: 45px;
     left: 50%;
     width: 40px;
     height: 40px;
@@ -12,7 +12,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 999999;
+    z-index: 999;
     opacity: 0;
     pointer-events: none;
     transform: translate(-50%, -50px) scale(0);
